# cc-bridge

./: .gitignore  .npmignore  README.md  package-lock.json  package.json
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: ChannelList.tsx  PairingList.tsx  StatusPanel.tsx
src/: index.ts
src/adapters/: base.ts  discord.ts  telegram.ts
src/cli/: index.ts
src/cli/commands/: agent.ts  allowlist.ts  bot.ts  channels.ts  hooks.ts  logs.ts  pairing.ts  sessions.ts  setup.ts  start.ts  status.ts
src/commands/: parser.ts
src/commands/handlers/: control.ts  discovery.ts  session.ts  settings.ts  status.ts
src/config/: loader.ts  schema.ts
src/core/: control-api.ts  logger.ts  plugins.ts  router.ts  session-manager.ts  types.ts
src/db/: sqlite.ts
src/security/: allowlist.ts  pairing.ts
src/webhooks/: mappings.ts  server.ts
src/webhooks/handlers/: generic.ts  github.ts  gmail.ts
